[tool.poetry]
name = "pdf-randomizer"
version = "0.1.0"
description = ""
authors = ["brendanlapuma <113568601+brendanlapuma@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
modal = ">=1.3.2,<2.0.0"
pypdf = ">=5.1.0"
reportlab = ">=4.0.0"
pillow = ">=10.0.0"
fastapi = "^0.128.7"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
